# quenderin

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  LAUNCH_CHECKLIST.md  QUICKSTART.md  README.md  RUN_GUIDE.md  SECURITY.md  SETUP.md  SIMPLE-SETUP.md  STATUS.md  TROUBLESHOOTING.md  codecov.yml  electron-builder.yaml  eslint.config.js  mkdocs.yml  package-lock.json  package.json  quenderin.example.json  tsconfig.json  vitest.config.ts  wrangler.site.jsonc
.claude/commands/: a11y-audit.md  api-audit.md  api-contract.md  audit-ui.md  batch-fix.md  bug-hunt.md  bug-sweep.md  critique-screen.md  dan-refactor.md  dan-review.md  dan-think.md  dan-verify.md  deploy-check.md  design-screen.md  env-check.md  fix-gap.md  go.md  implement-screen.md  lint-fix.md  next.md  perf-audit.md  ralph-redesign.md  run-tests.md  security-scan.md  session-end.md  session-start.md
.github/: dependabot.yml
.github/workflows/: catalog-urls.yml  ci.yml  deploy-website.yml  desktop-release.yml  social-post.yml
android/: .gitignore  INTEGRATION.md  README.md  gradle.properties  settings.gradle.kts  verify-llama-link.sh
android/app/: build.gradle.kts  proguard-rules.pro
android/jni/: CMakeLists.txt  llama_generate.h  llama_jni.cpp
android/quenderin-core/: README.md  build.gradle.kts
android/tools/: codemod_stringres.py  extract_strings.py  gen_strings.py  llama-smoketest.cpp
apple/: ARCHITECTURE.md  MODEL_SELECTION.md  REALITY.md  ROADMAP.md  build-xcframework.sh  verify-llama-link.sh
apple/QuenderinApp/: .gitignore  ExportOptions.plist  Info-macOS.plist  InfoPlist.xcstrings  Localizable.xcstrings  PrivacyInfo.xcprivacy  README.md  project.yml
apple/QuenderinKit/: .gitignore  INTEGRATION.md  Package.swift  README.md
apple/tools/: llama-smoketest.swift
appstore/: APPLE_REVIEW_REPLY_0.2.0-build10.md  METADATA.md
appstore/play/: GITHUB_RELEASE_NOTES.md  LISTING.md  TESTER_RECRUITMENT.md
brand/electron/: icon.icns
docs/: ADDING_A_CAPABILITY.md  AGENT_AUTONOMY_PLAN.md  API.md  ARCHITECTURE.md  BACKEND.md  BENCH_BASELINE.md  BRAND.md  BUG_JOURNAL.md  BUILD_MOBILE.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  DEVICE_VERIFICATION.md  FACEBOOK_STRATEGY.md  FRONTEND.md  HANDOFF.md  ICON_EXTRACTION.md  INFERENCE_101.md  KNOWN_FAILURE_MODES.md  LLAMA_CPP_101.md  MAC_APP_STORE.md  MICROSOFT_STORE.md  MOBILE_PERFORMANCE_101.md  NPU_NEURAL_ENGINE.md  PRODUCT.md  QUENDERIN_A_TO_Z.md  README.md  RELEASE.md  ROADMAP.md  SHELL_ROUTER_SETTINGS.md  SHIP_READINESS.md  STORE_LISTING.md  STORE_SUBMISSION.md  WINDOWS_LINUX_STRATEGY.md  agent-cross-platform-state.md
docs/audits/: 2026-06-14-CONSOLIDATED-open-findings.md  2026-06-14-r1-quenderin-security.md  2026-06-14-r2-quenderin-correctness.md  2026-06-14-r2-quenderin-tests.md  2026-06-14-r3-quenderin-arch.md  2026-06-14-r3-quenderin-performance.md  2026-06-14-r4-quenderin-deadcode.md  2026-06-14-r4-quenderin-docs.md  2026-06-14-r5-quenderin-research.md  2026-06-14-r5-quenderin-security.md  2026-06-14-r6-quenderin-correctness.md  2026-06-14-r6-quenderin-performance.md  2026-06-16-c3-ship-readiness-review.md  2026-06-16-c3-ship-readiness-review.raw.json  2026-06-16-preship-deep-review.md  (+79 more)
electron/: main.ts
examples/: api-endpoint.md  data-processing.md  simple-function.md
mobile/: .gitignore  App.tsx  app.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
prompts/: example.md
public/: index.html
scripts/: build_mac_dmg.sh  build_xcstrings.py  cf_pages_bootstrap.sh  check-jni-syntax.sh  check_agent_parity.py  check_catalog_parity.py  check_catalog_urls.py  check_router_parity.py  check_safety_parity.py  check_sampling_parity.py  deploy_website.sh  export_catalog.py  extract_ui_strings.py  gen-social-posts.cjs  gen_play_feature_graphic.py  generate_features_models.py  generate_icons.py  generate_model_logos.py  golden_chore_suite.ts  merge_kja_zh_1.py  merge_kja_zh_2.py  merge_kja_zh_3.py  post-to-facebook.cjs  refresh_model_hashes.py  serve_website.mjs  smoke_llm_engine.ts  social-content.cjs  translate_demos.py  translate_i18n.py  translations.tsv
shared/: agent-parity-vectors.json  model-catalog.json  router-parity-vectors.json  safety-blocklist.json  sampling-profiles.json
src/: app.ts  config.ts  constants.ts  generator.ts  index.ts  interactive-setup.ts  manifest.ts  providers.ts  server.ts  types.ts  ui-server.ts  unified-generator.ts
tests/: action-executor-safety.test.ts  action-intent.test.ts  agent-control.test.ts  agent-ledger-route.test.ts  agent-parity.test.ts  agentLoop.test.ts  android.provider.test.ts  app-capabilities.test.ts  app-headers.test.ts  app-read-auth.test.ts  atomic-write.test.ts  auth-token.test.ts  background-daemon.test.ts  best-installable-model.test.ts  box-geometry.test.ts  bulk-guard.test.ts  calculator.test.ts  capability-agent.test.ts  catalog.test.ts  chat-compose.test.ts  constants.test.ts  dashboard-tasks.test.ts  dry-run.test.ts  error-handler.test.ts  file-capabilities.test.ts  governed-agent.test.ts  hardware.test.ts  has-auth-token.test.ts  intent-classifier.test.ts  kill-switch.test.ts  ledger-view.test.ts  llm.service.test.ts  mac-capabilities.test.ts  mac-ui.test.ts  manifest.test.ts  memory-cache.test.ts  memory.service.test.ts  metrics-concurrency.test.ts  metrics-habits-route.test.ts  metrics.service.test.ts  (+35 more)
ui/: README.md  app.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
website/: 404.html  README.md  _headers  accessibility.html  blog-agent-hands.html  blog-android-beta.html  blog-cli.html  blog-computer-use.html  blog-ggml-abort.html  blog-model-integrity.html  blog-setup.html  blog.html  changelog.html  download.html  faq.html  features.html  gradient.js  help.html  how-it-works.html  i18n.js  index.html  legal.html  main.js  models.html  netlify.toml  post.js  privacy.html  reality.html  research.html  roadmap.html  robots.txt  site.config.json  site.webmanifest  sitemap.xml  styles.css  sw.js  terms.html  why-local-agent.html
(+527 files in other folders)
